Fixes unstyled scrollbar and no top margin on messages

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -144,6 +144,7 @@ footer {
     gap: 2rem;
     max-width: 100%;
     overflow: auto;
+    scrollbar-color: var(--scrollbar-color);
   }
 }
 
