--- a/_sass/_message.scss
+++ b/_sass/_message.scss
@@ -5,6 +5,7 @@
 
 .message {
   padding: var(--spacer);
+  margin-top: var(--spacer);
   margin-bottom: var(--spacer);
   color: var(--dark-5);
   background-color: var(--message-bg);
